--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/recipename.html">White Cheese Chicken Lasagna</a>
+    <ul>
+      <li><a href="recipes/lasagna.html">White Cheese Chicken Lasagna</a></li>
+      <li>
+        <a href="recipes/tacos.html"
+          >Fiery Fish Tacos with Crunchy Corn Salsa</a
+        >
+      </li>
+      <li><a href="recipes/pie.html">Sweet Potato Pie</a></li>
+    </ul>
   </body>
 </html>
