--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,87 +3,93 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MyRecipes</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body>
-    <h1>White Cheese Chicken Lasagna</h1>
-    <img src="./white-cheese-chicken-lasagna.jpeg" />
+  <body class="lasagna">
+    <div class="container">
+      <h1 c>White Cheese Chicken Lasagna</h1>
+      <img src="lasagna.jpeg" />
 
-    <h2>How to Make Chicken Lasagna</h2>
-    <p>
-      You'll find the full, step-by-step recipe below — but here's a brief
-      overview of what you can expect when you make this homemade chicken
-      lasagna:
-    </p>
-    <ol>
-      <li>Boil and drain the lasagna noodles.</li>
-      <li>
-        Cook the onion and garlic in butter, then whisk in the flour. Add the
-        broth, milk, and salt.
-      </li>
-      <li>
-        Add some of the mozzarella and Parmesan. Season with basil, oregano, and
-        pepper. Set aside.
-      </li>
-      <li>Assemble the lasagna according to the recipe.</li>
-      <li>Bake in the preheated oven.</li>
-    </ol>
+      <h2>How to Make Chicken Lasagna</h2>
+      <p>
+        You'll find the full, step-by-step recipe below — but here's a brief
+        overview of what you can expect when you make this homemade chicken
+        lasagna:
+      </p>
+      <ol>
+        <li>Boil and drain the lasagna noodles.</li>
+        <li>
+          Cook the onion and garlic in butter, then whisk in the flour. Add the
+          broth, milk, and salt.
+        </li>
+        <li>
+          Add some of the mozzarella and Parmesan. Season with basil, oregano,
+          and pepper. Set aside.
+        </li>
+        <li>Assemble the lasagna according to the recipe.</li>
+        <li>Bake in the preheated oven.</li>
+      </ol>
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>9 lasagna noodles</li>
-      <li>½ cup butter</li>
-      <li>1 onion, chopped</li>
-      <li>1 clove garlic, minced</li>
-      <li>½ cup all-purpose flour</li>
-      <li>2 cups chicken broth</li>
-      <li>1 ½ cups milk</li>
-      <li>1 teaspoon salt</li>
-      <li>4 cups shredded mozzarella cheese, divided</li>
-      <li>1 cup grated Parmesan cheese, divided</li>
-      <li>1 teaspoon dried basil</li>
-      <li>1 teaspoon dried oregano</li>
-      <li>½ teaspoon ground black pepper</li>
-      <li>2 cups ricotta cheese</li>
-      <li>2 cups cubed, cooked chicken meat</li>
-      <li>2 (10 ounce) packages frozen chopped spinach, thawed and drained</li>
-      <li>1 tablespoon chopped fresh parsley</li>
-    </ul>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>9 lasagna noodles</li>
+        <li>½ cup butter</li>
+        <li>1 onion, chopped</li>
+        <li>1 clove garlic, minced</li>
+        <li>½ cup all-purpose flour</li>
+        <li>2 cups chicken broth</li>
+        <li>1 ½ cups milk</li>
+        <li>1 teaspoon salt</li>
+        <li>4 cups shredded mozzarella cheese, divided</li>
+        <li>1 cup grated Parmesan cheese, divided</li>
+        <li>1 teaspoon dried basil</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>½ teaspoon ground black pepper</li>
+        <li>2 cups ricotta cheese</li>
+        <li>2 cups cubed, cooked chicken meat</li>
+        <li>
+          2 (10 ounce) packages frozen chopped spinach, thawed and drained
+        </li>
+        <li>1 tablespoon chopped fresh parsley</li>
+      </ul>
 
-    <h2>Steps</h2>
-    <ol>
-      <li><strong>Step 1</strong></li>
-      <p>Preheat the oven to 350 degrees F (175 degrees C).</p>
-      <li><strong>Step 2</strong></li>
-      <p>
-        Bring a large pot of lightly salted water to a boil. Add lasagna noodles
-        and cook for 8 to 10 minutes or until al dente; drain and rinse with
-        cold water.
-      </p>
-      <li><strong>Step 3</strong></li>
-      <p>
-        Meanwhile, melt butter in a large saucepan over medium heat; stir in
-        onion and garlic. Whisk in flour until lightly browned and onion is
-        tender, about 2 minutes. Add chicken broth, milk, and salt; cook,
-        whisking continuously, for 1 minute.
-      </p>
-      <li><strong>Step 4</strong></li>
-      <p>
-        Stir in 2 cups mozzarella and 1/4 cup Parmesan until well combined.
-        Season with basil, oregano, and black pepper; remove from heat and set
-        aside.
-      </p>
-      <li><strong>Step 5</strong></li>
-      <p>
-        Spread 1/3 of the sauce mixture in the bottom of a 9x13-inch baking
-        dish. Layer with 3 lasagna noodles, ricotta, and chicken. Arrange 3
-        lasagna noodles over the chicken and layer with 1/3 of the sauce
-        mixture, spinach, remaining 2 cups mozzarella, and 1/2 cup Parmesan.
-        Arrange remaining noodles over cheese and spread remaining sauce evenly
-        over noodles. Sprinkle with parsley and remaining 1/4 cup Parmesan.
-      </p>
-      <li><strong>Step 6</strong></li>
-      <p>Bake in the preheated oven for 35 to 40 minutes.</p>
-    </ol>
+      <h2>Steps</h2>
+      <ol>
+        <li><strong>Step 1</strong></li>
+        <p>Preheat the oven to 350 degrees F (175 degrees C).</p>
+        <li><strong>Step 2</strong></li>
+        <p>
+          Bring a large pot of lightly salted water to a boil. Add lasagna
+          noodles and cook for 8 to 10 minutes or until al dente; drain and
+          rinse with cold water.
+        </p>
+        <li><strong>Step 3</strong></li>
+        <p>
+          Meanwhile, melt butter in a large saucepan over medium heat; stir in
+          onion and garlic. Whisk in flour until lightly browned and onion is
+          tender, about 2 minutes. Add chicken broth, milk, and salt; cook,
+          whisking continuously, for 1 minute.
+        </p>
+        <li><strong>Step 4</strong></li>
+        <p>
+          Stir in 2 cups mozzarella and 1/4 cup Parmesan until well combined.
+          Season with basil, oregano, and black pepper; remove from heat and set
+          aside.
+        </p>
+        <li><strong>Step 5</strong></li>
+        <p>
+          Spread 1/3 of the sauce mixture in the bottom of a 9x13-inch baking
+          dish. Layer with 3 lasagna noodles, ricotta, and chicken. Arrange 3
+          lasagna noodles over the chicken and layer with 1/3 of the sauce
+          mixture, spinach, remaining 2 cups mozzarella, and 1/2 cup Parmesan.
+          Arrange remaining noodles over cheese and spread remaining sauce
+          evenly over noodles. Sprinkle with parsley and remaining 1/4 cup
+          Parmesan.
+        </p>
+        <li><strong>Step 6</strong></li>
+        <p>Bake in the preheated oven for 35 to 40 minutes.</p>
+      </ol>
+    </div>
   </body>
 </html>
