--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -3,59 +3,63 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MyRecipes</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>Fiery Fish Tacos with Crunchy Corn Salsa</h1>
-    <img src="./tacos.jpeg" />
+    <div class="container">
+      <h1>Fiery Fish Tacos with Crunchy Corn Salsa</h1>
+      <img src="./tacos.jpeg" />
 
-    <h2>Description</h2>
-    <p>
-      Spicy grilled fish are cooled down with a fresh crunchy veggie salsa
-      featuring fresh corn. Your guests will swim back for seconds!
-    </p>
+      <h2>Description</h2>
+      <p>
+        Spicy grilled fish are cooled down with a fresh crunchy veggie salsa
+        featuring fresh corn. Your guests will swim back for seconds!
+      </p>
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>2 cups cooked corn kernels</li>
-      <li>½ cup diced red onion</li>
-      <li>1 cup peeled, diced jicama</li>
-      <li>½ cup diced red bell pepper</li>
-      <li>1 cup fresh cilantro leaves, chopped</li>
-      <li>1 lime, juiced and zested</li>
-      <li>2 tablespoons cayenne pepper, or to taste</li>
-      <li>1 tablespoon ground black pepper</li>
-      <li>2 tablespoons salt, or to taste</li>
-      <li>6 (4 ounce) fillets tilapia</li>
-      <li>2 tablespoons olive oil</li>
-      <li>12 corn tortillas, warmed</li>
-      <li>2 tablespoons sour cream, or to taste</li>
-    </ul>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>2 cups cooked corn kernels</li>
+        <li>½ cup diced red onion</li>
+        <li>1 cup peeled, diced jicama</li>
+        <li>½ cup diced red bell pepper</li>
+        <li>1 cup fresh cilantro leaves, chopped</li>
+        <li>1 lime, juiced and zested</li>
+        <li>2 tablespoons cayenne pepper, or to taste</li>
+        <li>1 tablespoon ground black pepper</li>
+        <li>2 tablespoons salt, or to taste</li>
+        <li>6 (4 ounce) fillets tilapia</li>
+        <li>2 tablespoons olive oil</li>
+        <li>12 corn tortillas, warmed</li>
+        <li>2 tablespoons sour cream, or to taste</li>
+      </ul>
 
-    <h2>Steps</h2>
-    <ol>
-      <li><strong>Step 1</strong></li>
-      <p>Preheat grill for high heat.</p>
+      <h2>Steps</h2>
+      <ol>
+        <li><strong>Step 1</strong></li>
+        <p>Preheat grill for high heat.</p>
 
-      <li><strong>Step 2</strong></li>
-      <p>
-        In a medium bowl, mix together corn, red onion, jicama, red bell pepper,
-        and cilantro. Stir in lime juice and zest.
-      </p>
-      <li><strong>Step 3</strong></li>
-      <p>
-        In a small bowl, combine cayenne pepper, ground black pepper, and salt.
-      </p>
-      <li><strong>Step 4</strong></li>
-      <p>
-        Brush each fillet with olive oil, and sprinkle with spices to taste.
-      </p>
-      <li><strong>Step 5</strong></li>
-      <p>
-        Arrange fillets on grill grate, and cook for 3 minutes per side. For
-        each fiery fish taco, top two corn tortillas with fish, sour cream, and
-        corn salsa.
-      </p>
-    </ol>
+        <li><strong>Step 2</strong></li>
+        <p>
+          In a medium bowl, mix together corn, red onion, jicama, red bell
+          pepper, and cilantro. Stir in lime juice and zest.
+        </p>
+        <li><strong>Step 3</strong></li>
+        <p>
+          In a small bowl, combine cayenne pepper, ground black pepper, and
+          salt.
+        </p>
+        <li><strong>Step 4</strong></li>
+        <p>
+          Brush each fillet with olive oil, and sprinkle with spices to taste.
+        </p>
+        <li><strong>Step 5</strong></li>
+        <p>
+          Arrange fillets on grill grate, and cook for 3 minutes per side. For
+          each fiery fish taco, top two corn tortillas with fish, sour cream,
+          and corn salsa.
+        </p>
+      </ol>
+    </div>
   </body>
 </html>
