feat: New recipe added, animation for index.html title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <h1 class="title">Odin Recipes</h1>
+    <div class="wrapper">
+      <h1 class="title">Odin Recipes</h1>
+    </div>
 
     <div class="recipes">
       <a href="recipes/lasagna.html">
@@ -28,6 +30,12 @@
         <div class="recipes-container">
           <img src="./recipes/sweet-potato-pie-1.jpeg" />
           <p>Sweet Potato Pie</p>
+        </div></a
+      >
+      <a href="recipes/cake.html">
+        <div class="recipes-container">
+          <img src="./recipes/cake.jpg" />
+          <p>German Sunken Apple Cake</p>
         </div></a
       >
     </div>
