--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
   </head>
   <body class="lasagna">
     <div class="container">
-      <h1 c>White Cheese Chicken Lasagna</h1>
+      <h1>White Cheese Chicken Lasagna</h1>
       <img src="lasagna.jpeg" />
 
       <h2>How to Make Chicken Lasagna</h2>
